Updates app-etc-load dep

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "url": "https://github.com/kgryte/node-app-etc-config/issues"
   },
   "dependencies": {
-    "app-etc-load": "git+https://github.com/kgryte/node-app-etc-load.git",
+    "app-etc-load": "0.0.0",
     "type-name": "^1.0.1",
     "utils-copy": "^1.0.0",
     "utils-deep-get": "^1.0.0",
